improve responsive of login container

--- a/index.html
+++ b/index.html
@@ -71,17 +71,17 @@
         </div>
 
       </div>
-      <div class="login relative">
+      <div class="login ">
         <i class="fa fa-user cursor-pointer  text-xl"></i>
         <!-- LOGIN TEMPLATE -->
-        <section class="login-container w-96">
+        <section class="login-container w-96 hidden">
           <h1 class="text-center font-bold underline">LOGIN</h1>
           <div class="flex items-center gap-2 text-lg">
             <p>Sign in with</p>
             <div>
               <i class="bi bi-facebook text-blue-700"></i>
-              <i class="bi bi-twitter text-blue-700"></i>
-              <i class="bi bi-linkedin text-blue-700"></i>
+              <i class="bi bi-twitter text-sky-500"></i>
+              <i class="bi bi-linkedin text-blue-600"></i>
             </div>
           </div>
 
