--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     </p>
   </div>
 
-  <header class="flex justify-between border-bottom pt-4 px-6 items-center">
+  <header class="flex justify-between border-bottom pt-1 px-6 items-center">
     <div class="logo">
-      <img src="./assets/img/logo.svg" alt="logo">
+      <img class="w-16" src="./assets/img/logo.svg" alt="logo">
     </div>
     <nav class="hidden lg:block place-self-end pb-2">
       <ul class="flex gap-4">
@@ -58,81 +58,84 @@
         <li><a class="font-bold" href="#">NIÑOS</a></li>
         <li><a class="" href="#">DEPORTES</a></li>
         <li><a class="" href="#">MARCAS</a></li>
+        <li><a class="" href="#">COLECCIONES</a></li>
         <li><a class="" href="#">REGALOS</a></li>
-        <li><a class="text-red-500 font-bold" href="#">CYBER DAYS</a></li>
+        <!-- <li><a class="text-red-500 font-bold" href="#">CYBER DAYS</a></li> -->
       </ul>
     </nav>
-    <div class="flex gap-4">
-      <div class="search">
-        <div
-          class="w-52 h-6 bg-gray-200 flex justify-between items-center px-2 hover:border-gray-400 hover:border cursor-text">
-          <input type="search" class="bg-transparent outline-none" placeholder="Search">
-          <i class="fa fa-search"></i>
+    <div class="flex flex-col gap-4">
+      <div class="flex flex-row gap-4 justify-end">
+        <div class="search">
+          <div
+            class="w-52 h-6 bg-gray-200 flex justify-between items-center px-2 hover:border-gray-400 hover:border cursor-text">
+            <input type="search" class="bg-transparent outline-none" placeholder="Search">
+            <i class="fa fa-search"></i>
+          </div>
+
         </div>
+        <div class="login ">
+          <i class="fa fa-user cursor-pointer  text-xl"></i>
+          <!-- LOGIN TEMPLATE -->
+          <section class="login-container w-96 hidden">
+            <h1 class="text-center font-bold underline">LOGIN</h1>
+            <div class="flex items-center gap-2 text-lg">
+              <p>Sign in with</p>
+              <div>
+                <i class="bi bi-facebook text-blue-700"></i>
+                <i class="bi bi-twitter text-sky-500"></i>
+                <i class="bi bi-linkedin text-blue-600"></i>
+              </div>
+            </div>
 
-      </div>
-      <div class="login ">
-        <i class="fa fa-user cursor-pointer  text-xl"></i>
-        <!-- LOGIN TEMPLATE -->
-        <section class="login-container w-96 hidden">
-          <h1 class="text-center font-bold underline">LOGIN</h1>
-          <div class="flex items-center gap-2 text-lg">
-            <p>Sign in with</p>
+            <p class="text-center font-bold">or</p>
+
+            <div class="flex flex-col gap-2">
+              <input class="form-control" type="email" name="email" id="email" placeholder="Email address">
+              <input class="form-control" type="password" name="password" id="password" placeholder="Password">
+              <div class="flex justify-between">
+                <div><input type="checkbox"> Remember me</div>
+                <p>Forgot password?</p>
+              </div>
+              <button class="btn btn-primary">LOGIN</button>
+              <p>Don't have an account? <span class="text-red-500 font-bold cursor-pointer">Register</span></p>
+            </div>
+
+          </section>
+          <!--END LOGIN TEMPLATE -->
+        </div>
+        <div class="cart">
+          <i class="fa fa-shopping-bag cursor-pointer text-xl" count=""></i>
+          <div class="pasarela-container hidden">
+            <p class="py-2 text-center underline font-bold">Shopping cart</p>
+            <div class="products-cart-container"></div>
             <div>
-              <i class="bi bi-facebook text-blue-700"></i>
-              <i class="bi bi-twitter text-sky-500"></i>
-              <i class="bi bi-linkedin text-blue-600"></i>
-            </div>
-          </div>
-
-          <p class="text-center font-bold">or</p>
-
-          <div class="flex flex-col gap-2">
-            <input class="form-control" type="email" name="email" id="email" placeholder="Email address">
-            <input class="form-control" type="password" name="password" id="password" placeholder="Password">
-            <div class="flex justify-between">
-              <div><input type="checkbox"> Remember me</div>
-              <p>Forgot password?</p>
-            </div>
-            <button class="btn btn-primary">LOGIN</button>
-            <p>Don't have an account? <span class="text-red-500 font-bold cursor-pointer">Register</span></p>
-          </div>
-
-        </section>
-        <!--END LOGIN TEMPLATE -->
-      </div>
-      <div class="cart">
-        <i class="fa fa-shopping-bag cursor-pointer text-xl" count=""></i>
-        <div class="pasarela-container hidden">
-          <p class="py-2 text-center underline font-bold">Shopping cart</p>
-          <div class="products-cart-container"></div>
-          <div>
-            <div class="flex justify-between pb-4">
-              <p>🔵Credit card</p>
-              <div class="flex gap-2 items-center">
-                <img src="./assets/img/visa.webp" class="w-6 h-3" alt="visa">
-                <img src="./assets/img/mastercard.png" class="w-6 h-3" alt="master-card">
-                <img src="./assets/img/ae.png" class="w-6 h-3" alt="american express">
+              <div class="flex justify-between pb-4">
+                <p>🔵Credit card</p>
+                <div class="flex gap-2 items-center">
+                  <img src="./assets/img/visa.webp" class="w-6 h-3" alt="visa">
+                  <img src="./assets/img/mastercard.png" class="w-6 h-3" alt="master-card">
+                  <img src="./assets/img/ae.png" class="w-6 h-3" alt="american express">
+                </div>
               </div>
-            </div>
-            <div class="flex flex-col gap-4">
-              <div class="flex justify-between border border-gray-600 px-2">
-                <input type="number" class="outline-none" placeholder="Card number">
-                <img src="./assets/img/lock.svg" width="15px" alt="lock">
-              </div>
-              <div class="flex justify-between border border-gray-600 px-2">
-                <input class="outline-none" type="text" placeholder="Owner's name">
-              </div>
-              <div class="flex justify-between gap-2">
-                <input type="date" class="border border-gray-600 text-xs outline-none px-2">
-                <div class="border border-gray-600 flex items-center text-xs px-2">
-                  <input type="password" placeholder="Security code" class="outline-none">
-                  <i class="fa fa-question"></i>
+              <div class="flex flex-col gap-4">
+                <div class="flex justify-between border border-gray-600 px-2">
+                  <input type="number" class="outline-none" placeholder="Card number">
+                  <img src="./assets/img/lock.svg" width="15px" alt="lock">
+                </div>
+                <div class="flex justify-between border border-gray-600 px-2">
+                  <input class="outline-none" type="text" placeholder="Owner's name">
+                </div>
+                <div class="flex justify-between gap-2">
+                  <input type="date" class="border border-gray-600 text-xs outline-none px-2">
+                  <div class="border border-gray-600 flex items-center text-xs px-2">
+                    <input type="password" placeholder="Security code" class="outline-none">
+                    <i class="fa fa-question"></i>
+                  </div>
                 </div>
               </div>
             </div>
+            <button class="btn btn-success px-4 mt-4 d-block hover:scale-105 m-auto">Pay</button>
           </div>
-          <button class="btn btn-success px-4 mt-4 d-block hover:scale-105 m-auto">Pay</button>
         </div>
       </div>
     </div>
