some changes to make responsive footer

--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
       <h1 class="text-4xl italic font-semibold mt-4">ZAPATILLAS ADIDAS ORIGINALS <span
           class="text-xs text-gray-400">[620]</span>
       </h1>
-      <p class="w-3/5 mt-2">Encuentra aquí zapatillas adidas originals. Las combinaciones de colores, tipo y grosor de
+      <p class="lg:w-3/5 mt-2">Encuentra aquí zapatillas adidas originals. Las combinaciones de colores, tipo y grosor
+        de
         suela,
         materiales y
         textiles técnicos hacen que la posibilidad de elegir un par de modelos pueda acabar siendo una aventura.</p>
@@ -315,13 +316,13 @@
     </div>
 
     <div class="flex flex-col bg-zinc-800 text-gray-300 justify-center items-center text-sm">
-      <ul class="flex py-4 gap-3">
-        <a class="border-r-white border-r pr-4" href="#">Nuestros datos</a>
-        <a class="border-r-white border-r pr-4" href="#">Términos y condiciones</a>
-        <a class="border-r-white border-r pr-4" href="#">Politicas de Privacidad</a>
-        <a class="border-r-white border-r pr-4" href="#">Términos y #YESadidas</a>
-        <a class="border-r-white border-r pr-4" href="#">Seleccionar País</a>
-        <a class="border-r-white border-r pr-4" href="#">Uso del sitio</a>
+      <ul class="flex py-4 gap-3 flex-col lg:flex-row">
+        <a class="border-r-white lg:border-r pr-4 text-center" href="#">Nuestros datos</a>
+        <a class="border-r-white lg:border-r pr-4 text-center" href="#">Términos y condiciones</a>
+        <a class="border-r-white lg:border-r pr-4 text-center" href="#">Politicas de Privacidad</a>
+        <a class="border-r-white lg:border-r pr-4 text-center" href="#">Términos y #YESadidas</a>
+        <a class="border-r-white lg:border-r pr-4 text-center" href="#">Seleccionar País</a>
+        <a class="border-r-white lg:border-r pr-4 text-center" href="#">Uso del sitio</a>
       </ul>
       <p class="pb-3">&copy; adidas Perú SAC, RUC 20347100316. Av.28 de Julio 1011, interior 1001, Miraflores, Código
         Postal Lima 18
