changes in login container style

--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
           <!-- LOGIN TEMPLATE -->
           <section class="login-container w-96 hidden">
             <h1 class="text-center font-bold underline">LOGIN</h1>
-            <div class="flex items-center gap-2 text-lg">
+            <div class="flex justify-between items-center gap-2 text-lg">
               <p>Sign in with</p>
               <div>
-                <i class="bi bi-facebook text-blue-700"></i>
-                <i class="bi bi-twitter text-sky-500"></i>
-                <i class="bi bi-linkedin text-blue-600"></i>
+                <i class="cursor-pointer bi bi-facebook text-blue-700"></i>
+                <i class="cursor-pointer bi bi-twitter text-sky-500"></i>
+                <i class="cursor-pointer bi bi-linkedin text-blue-600"></i>
               </div>
             </div>
 
@@ -109,7 +109,7 @@
             <p class="py-2 text-center underline font-bold">Shopping cart</p>
             <div class="products-cart-container"></div>
             <div>
-              <div class="flex justify-between pb-4">
+              <div class="flex justify-between pb-4 mt-2">
                 <p>🔵Credit card</p>
                 <div class="flex gap-2 items-center">
                   <img src="./assets/img/visa.webp" class="w-6 h-3" alt="visa">
