add hidden class to login

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="login ">
           <i class="fa fa-user cursor-pointer  text-xl"></i>
           <!-- LOGIN TEMPLATE -->
-          <section class="login-container w-96 mt-4 fixed">
+          <section class="login-container w-96 mt-4 fixed hidden">
             <h1 class="text-center font-bold underline">LOGIN</h1>
             <div class="flex items-center gap-3 text-lg py-2">
               <p>Sign in with</p>
